src/objects/NC_History__c.object
<CustomObject>
    <description>Audit Trail Object for Non-Conformance module.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>NewValue</label>
        <length>130768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Non_Conformance__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Non-Conformance</label>
        <referenceTo>Non_Conformance__c</referenceTo>
        <relationshipName>Non_Conformance_Histories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>OldValue</label>
        <length>130768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Conformance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Containment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>NC History</label>
    <nameField>
        <displayFormat>H-{0000000000}</displayFormat>
        <label>Non-Conformance-History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NC Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>